<resources>
    <string name="app_name">StudyPaging3</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">BookMark</string>
    <string name="bookmark_sort_reg_date_desc">등록일↑</string>
    <string name="bookmark_sort_reg_date_asc">등록일↓</string>
    <string name="bookmark_sort_review_desc">평점순↑</string>
    <string name="bookmark_sort_review_asc">평점순↓</string>

    <string name="bookmark_register_yyyy_mm_dd_ss">등록일 : yyyy-MM-dd HH시 mm분 ss초</string>

    <!-- Toast message -->
    <string name="common_toast_msg_network_error">잠시 후 다시 이용해주세요.</string>

    <string name="fragment_bookmark_no_list_data">즐겨찾기 항목을 추가해주세요.</string>

    <string name="activity_product_detail_iv_thumbnail_description">제휴점 이미지</string>
    <string name="item_product_iv_thumbnail_description">제휴점 이미지</string>
    <string name="item_bookmark_iv_thumbnail_description">북마크 제휴점 이미지</string>

</resources>
